[package]
name = "xplm-sys"
version = "0.3.1"
authors = ["Sam Crow <samcrow@uw.edu>"]
description = "Low-level bindings for the X-Plane plugin SDK"
repository = "https://github.com/samcrow/xplm-sys"
readme = "README.md"
keywords = ["X-Plane", "plugin"]
categories = ["external-ffi-bindings", ]
license = "MIT/Apache-2.0"

build = "build.rs"

[build-dependencies]
bindgen = "0.49"

[features]
# Enables SDK 2.0 features
xplm200 = []
# Enables SDK 2.1 features
xplm210 = []
# Enables SDK 3.0 features
xplm300 = []
# Enables SDK 3.0.1 features
xplm301 = []
